tests/NormalTests/paczka1/fuzzy1/25352241.err
Error in line 1: O6ClyxFuTgM A924 37,6
Error in line 10: Ar0rCtIwp45 A474 35,5
Error in line 27: A77 A924 19,0
Error in line 29: A77 A474 53,8
